--- a/configuration.properties
+++ b/configuration.properties
@@ -14,4 +14,12 @@ HMCWrongUsername=manager2
 HMCWrongPassword=manager1/
 
 HerokuappAddElementUrl=https://the-internet.herokuapp.com/add_remove_elements/
-WebUniversityUrl=http://webdriveruniversity.com
+WebUniversityUrl=https://webdriveruniversity.com
+
+DemoGuruUrl=https://demo.guru99.com/test/web
+
+AutomationPracticeUrl=https://automationpractice.com/index.php
+AutPracYanlisEmail=mehmet.gmail.com
+AutPracHataYazisi=Invalid email address.
+
+DemoQaUrl=https://demoqa.com/dynamic-properties
